k8s-manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: togglemaster
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
